# anyio-executor

./: README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  release.yaml  test.yaml
src/anyio_executor/: __init__.py  azip.py  core.py
tests/: conftest.py  test_executor.py
