[project]
name = "anyio-executor"
dynamic = ["version"]
description = "anyio implementation of an asynchronous Executor."
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiologic>=0.16.0",
    "anyio>=4.13.0",
]
[build-system]
requires = ["setuptools"]


[project.optional-dependencies]
test = ["pytest"]
test-advanced = [
    'uvloop; platform_system != "Windows"',
    'winloop; platform_system == "Windows"',
    'trio',
    'pytest',
]

[project.urls]
    repository = "https://github.com/Vizonex/anyio-executor.git"


[tool.setuptools.dynamic]
version = {attr = "anyio_executor.__version__"}

[tool.ruff.lint]
select = ["E", "I", "UP", "ASYNC", "F", "RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2